Minor spelling cleanups

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -194,6 +194,7 @@
         "otool",
         "patchelf",
         "Pickler",
+        "pipenv",
         "pkglib",
         "Podman",
         "POSIX",
@@ -223,6 +224,7 @@
         "repr",
         "reprfunc",
         "richcmpfunc",
+        "roadmap",
         "RPATH",
         "rpaths",
         "Scons",
