Plugins: Move the implicit imports from plugin to yaml configuration
* This moves most of the code based implicit imports to
  Yaml configuration, with a few exceptions where we think
  that more features might be added to the format before
  doing it.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -278,6 +278,6 @@
     "esbonio.sphinx.confDir": "",
     "cSpell.spellCheckOnlyWorkspaceFiles": true,
     "yaml.schemas": {
-        "misc/nuitka-package-config-schema.json": "standard.nuitka-package.config.yml"
+        "misc/nuitka-package-config-schema.json": ["standard.nuitka-package.config.yml", "stdlib2.standard.nuitka-package.config.yml", "stdlib3.standard.nuitka-package.config.yml"]
     }
 }
