Optimization: Add support for "os.path" hard import
* This also adds nodes for "os.path.exists", "os.path.isfile",
  and "os.path.isdir" nodes.

* This is a bit problematic, because "os.path" is really named
  e.g. "posixpath" and not really an imported module, however
  we can handle this now too.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -153,6 +153,8 @@
         "inplace",
         "iolddiv",
         "ipython",
+        "isfile",
+        "startswith",
         "isgenerator",
         "isort",
         "iteritems",
@@ -278,6 +280,10 @@
     "esbonio.sphinx.confDir": "",
     "cSpell.spellCheckOnlyWorkspaceFiles": true,
     "yaml.schemas": {
-        "misc/nuitka-package-config-schema.json": ["standard.nuitka-package.config.yml", "stdlib2.standard.nuitka-package.config.yml", "stdlib3.standard.nuitka-package.config.yml"]
+        "misc/nuitka-package-config-schema.json": [
+            "standard.nuitka-package.config.yml",
+            "stdlib2.standard.nuitka-package.config.yml",
+            "stdlib3.standard.nuitka-package.config.yml"
+        ]
     }
 }
