Plugins: Add support for DLL configuration to provide executables

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1643,7 +1643,7 @@
     - dest_path: "shapely"
       by_code:
         setup_code: "import shapely.geos"
-        dll_filename_code: "shapely.geos._lgeos._name"
+        filename_code: "shapely.geos._lgeos._name"
 
 - module-name: "shiboken6"
   implicit-imports:
