Standalone: Added back support for older pyzmq
* This also adds support for specifying the DLL suffixes to scan for.

* The old zmq requires on Windows to put a module also as a DLL
  globally.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -2828,6 +2828,19 @@
     dirs:
       - "schemas"
 
+- module-name: "zmq"
+  dlls:
+    # Do not look at this one, using dest_path and suffixes is not
+    # needed at all normally, but this one is trange and for old PyZMQ
+    # only.
+    - from_filenames:
+        prefixes:
+          - "libzmq"
+        suffixes:
+          - "pyd"
+      dest_path: "."
+      when: "win32"
+
 - module-name: "zmq.backend"
   implicit-imports:
     - depends:
