--- a/nuitka/plugins/standard/stdlib3.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/stdlib3.nuitka-package.config.yml
@@ -8,6 +8,11 @@
     - depends:
         - "asyncio"
 
+- module-name: "_zoneinfo"
+  implicit-imports:
+    - depends:
+        - "zoneinfo._common"
+
 - module-name: "ast"
   anti-bloat:
     - description: "remove module ability to run as a binary"
@@ -314,3 +319,8 @@
     - description: "remove module ability to run as a binary"
       change_function:
         "main": "'(lambda: None)'"
+
+- module-name: "zoneinfo._common"
+  implicit-imports:
+    - depends:
+        - "tzdata.zoneinfo"
