Standalone: Added support for using "shapely" in Anaconda as well

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1657,11 +1657,50 @@
         "test": "'(lambda: None)'"
 
 - module-name: "shapely.geos"
+  anti-bloat:
+    - description: "change geos DLL location"
+      replacements_plain:
+        '_lgeos = load_dll("geos_c.dll")': '_lgeos = load_dll("geos_c.dll", fallbacks=[os.path.join(os.path.dirname(__file__), "geos_c.dll")])'
+      when: "win32"
+    - description: "avoid runtime Anaconda environment influence"
+      replacements_plain:
+        "os.getenv('CONDA_PREFIX', '')": "''"
   dlls:
+    # PyPI has it contained.
     - by_code:
         setup_code: "import shapely.geos"
         filename_code: "shapely.geos._lgeos._name"
+      when: "not anaconda and not win32"
+    # Anaconda or Win32 are forced to specific path.
+    - by_code:
+        setup_code: "import shapely.geos, os"
+        filename_code: "shapely.geos._lgeos._name"
       dest_path: "shapely"
+      when: "anaconda or win32"
+
+- module-name: "shapely.geometry.base"
+  anti-bloat:
+    - description: "remove doctest usage"
+      change_function:
+        "_test": "'(lambda: None)'"
+
+- module-name: "shapely.geometry.collection"
+  anti-bloat:
+    - description: "remove doctest usage"
+      change_function:
+        "_test": "'(lambda: None)'"
+
+- module-name: "shapely.geometry.multipolygon"
+  anti-bloat:
+    - description: "remove doctest usage"
+      change_function:
+        "_test": "'(lambda: None)'"
+
+- module-name: "shapely.geometry.multilinestring"
+  anti-bloat:
+    - description: "remove doctest usage"
+      change_function:
+        "_test": "'(lambda: None)'"
 
 - module-name: "shiboken6"
   implicit-imports:
