Plugins: Added support for import pre/post code config, extra package dirs
* This allows us to finally get rid of the hard coded entry for
  win32com, and move it to configuration, renamed the item to
  express that multiple values are allowed.

* This adds a new plugin interface for the extra scan paths, that
  we implement in "implicit-imports" plugin.

* Also "win32ui" got a needed workaround after we improved the
  "__spec__.origin" value to be more correct some time ago, it
  expect a namespace to be loaded, where we do not normally have
  it.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -2854,7 +2854,7 @@
   import-hacks:
     # This package adds another directory to the search path of itself,
     # which we will not find packages in unless added.
-    - package-dir:
+    - package-dirs:
         - "win32comext"
 
 - module-name: "wx"
@@ -2929,3 +2929,10 @@
         "_skip_under_py2": "'(lambda test_method: None)'"
         "_skip_under_py3k": "'(lambda test_method: None)'"
       when: "not use_unittest"
+
+- module-name: "win32ui"
+  implicit-imports:
+    - pre-import-code:
+        # That is a namespace module only, but it seems the extension modules needs it,
+        # despite the DLLs being present.
+        - "import pywin32_system32"
