Debian: Fix, versioned dependency for libzstd should also be in package

--- a/debian/control
+++ b/debian/control
@@ -45,7 +45,7 @@ Depends: gcc (>= 5.0) | g++ (>= 4.4) | clang (>= 3.0),
          python3-appdirs | base-files (<< 7.2),
          python3-dev,
          zlib1g-dev,
-         libzstd-dev,
+         libzstd-dev | base-files (<= 9),
          ccache,
          patchelf,
          ${misc:Depends},
