Plugins: Implement "package-paths" for import hacks too.
* With this, "vtk.util" can be found.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -2809,7 +2809,7 @@
   import-hacks:
     # This module aliases itself to another package, for which we will
     # not find packages in unless added.
-    - package-path:
+    - package-paths:
         - "vtkmodules"
 
 - module-name: "vtkmodules"
